kubernetes/multi-cluster-gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: request-info-global
  namespace: assessment-apps
spec:
  parentRefs:
    - name: request-info-global
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: request-info-gke-request-info-service
          port: 80
